--- a/src/app/pokemon/pages/pokemon-list/pokemon-list.component.html
+++ b/src/app/pokemon/pages/pokemon-list/pokemon-list.component.html
@@ -9,7 +9,7 @@
     </ng-container>
     <ng-container matColumnDef="type">
       <th mat-header-cell *matHeaderCellDef>type</th>
-      <td mat-cell *matCellDef="let pokemon"> {{pokemon.type}} </td>
+      <td mat-cell *matCellDef="let pokemon"> {{ getTypeName(pokemon.typeId) }} </td>
     </ng-container>
     <ng-container matColumnDef="update">
       <th mat-header-cell *matHeaderCellDef>Update</th>
