Débug List/Update/Post + début Details

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
     <mat-toolbar color="warn">
-        <span>My Application</span>
+        <span>Projet Angular Pokemon</span>
     </mat-toolbar>
 </header>
 
