--- a/src/app/pokemon/components/update-pokemon-form/update-pokemon-form.component.html
+++ b/src/app/pokemon/components/update-pokemon-form/update-pokemon-form.component.html
@@ -49,11 +49,10 @@
                 </mat-form-field>
             </div>
 
-
     </mat-dialog-content>
     <mat-dialog-actions align="end">
         <button mat-button mat-dialog-close>Annuler</button>
-        <button mat-button [mat-dialog-close]="true" type="submit" cdkFocusInstall [disabled]="!pokemonForm.valid"></button>
+        <button mat-button [mat-dialog-close]="true" type="submit" cdkFocusInstall [disabled]="!pokemonForm.valid">Modifier</button>
     </mat-dialog-actions>
 
 </form>
