--- a/src/app/pokemon/pages/pokemon-details/pokemon-details.component.html
+++ b/src/app/pokemon/pages/pokemon-details/pokemon-details.component.html
@@ -1,1 +1,6 @@
-<p>pokemon-details works!</p>
+{{ pokemon.id }}
+{{ pokemon.nom }}
+{{ pokemon.attaque }}
+{{ pokemon.defense }}
+{{ pokemon.vitesse }}
+{{ pokemon.typeId }}
