--- a/src/app/pokemon/components/pokemon-form/pokemon-form.component.html
+++ b/src/app/pokemon/components/pokemon-form/pokemon-form.component.html
@@ -7,8 +7,8 @@
             <div>
                 <mat-form-field appearance="fill">
                     <mat-label>nom</mat-label>
-                    <input matInput placeholder="Jack" type="text" formControlName="nom">
-                    <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+                    <input matInput placeholder="Carapuce" type="text" formControlName="nom">
+                    
                 </mat-form-field>
             </div>
 
@@ -16,7 +16,7 @@
                 <mat-form-field appearance="fill">
                     <mat-label>attaque</mat-label>
                     <input matInput placeholder="20" type="number" formControlName="attaque">
-                    <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+                    
                 </mat-form-field>
             </div>
 
@@ -24,15 +24,15 @@
                 <mat-form-field appearance="fill">
                     <mat-label>défense</mat-label>
                     <input matInput placeholder="20" type="number" formControlName="defense">
-                    <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+                    
                 </mat-form-field>
             </div>
 
             <div>
                 <mat-form-field appearance="fill">
                     <mat-label>vitesse</mat-label>
-                    <input matInput placeholder="20" type="number" formControlName="defense">
-                    <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+                    <input matInput placeholder="20" type="number" formControlName="vitesse">
+                    
                 </mat-form-field>
             </div>
 
@@ -40,7 +40,7 @@
                 <mat-form-field appearance="fill">
                     <mat-label>Type</mat-label>
                     <mat-select formControlName="type">
-                    <mat-option *ngFor="let type of types" [value]="type">
+                    <mat-option *ngFor="let type of types" [value]="pokemonForm.value.type">
                         {{type}}
                     </mat-option>
                     </mat-select>
@@ -51,7 +51,7 @@
     </mat-dialog-content>
     <mat-dialog-actions align="end">
         <button mat-button mat-dialog-close>Annuler</button>
-        <button mat-button [mat-dialog-close]="true" type="submit" cdkFocusInstall [disabled]="!pokemonForm.valid"></button>
+        <button mat-button [mat-dialog-close]="true" type="submit" cdkFocusInstall [disabled]="!pokemonForm.valid">Ajout</button>
     </mat-dialog-actions>
 
 </form>
