--- a/src/app/pokemon/pages/pokemon-list/pokemon-list.component.html
+++ b/src/app/pokemon/pages/pokemon-list/pokemon-list.component.html
@@ -14,9 +14,11 @@
     <ng-container matColumnDef="update">
       <th mat-header-cell *matHeaderCellDef>Update</th>
       <td mat-cell *matCellDef="let pokemon">
-        <button mat-fab color="warn" (click)="openDialog2(pokemon)">
-          <mat-icon>settings</mat-icon>
-        </button>
+        <a href="pokemons/details/{{pokemon.id}}">
+          <button mat-fab color="warn">
+            <mat-icon>settings</mat-icon>
+          </button>
+        </a>
       </td>
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="titles"></tr>
