--- a/src/app/pokemon/pages/pokemon-list/pokemon-list.component.html
+++ b/src/app/pokemon/pages/pokemon-list/pokemon-list.component.html
@@ -21,6 +21,12 @@
         </a>
       </td>
     </ng-container>
+    <ng-container matColumnDef="delete">
+      <th mat-header-cell *matHeaderCellDef>Delete</th>
+      <td mat-cell *matCellDef="let pokemon" (click)="loadData()">
+        <app-delete-pokemon [toDelete]="pokemon.id"></app-delete-pokemon>
+      </td>
+    </ng-container>
     <tr mat-header-row *matHeaderRowDef="titles"></tr>
     <tr mat-row *matRowDef="let row; columns: titles;"></tr>
 </table>
