--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -1,3 +1,3 @@
-<mat-toolbar>
-
+<mat-toolbar color="warn">
+    <p>Note : les données peuvent mettre plusieurs dizaines de secondes à charger, le temps que l'api Heroku se mette en route.</p>
 </mat-toolbar>
