--- a/src/app/pokemon/pages/pokemon-details/pokemon-details.component.html
+++ b/src/app/pokemon/pages/pokemon-details/pokemon-details.component.html
@@ -1,31 +1,37 @@
-<h1 [style.color]="type['color']">{{ pokemon.nom }}</h1>
-
-<div>
-    <h2> Numéro#{{ pokemon.id }} </h2>
-    <h2>{{ type['nom'] }}</h2>
+<div [style.background]="type['color']" id="divTitle">
+    <h1 [style.color]="determineFontColor(type['color'])">{{ pokemon.nom }}</h1>
 </div>
 
-<table>
-    <tr>
-        <td>Attaque</td>
-        <td>{{ pokemon.attaque }}</td>
-    </tr>
-    <tr>
-        <td>Défense</td>
-        <td>{{ pokemon.defense }}</td>
-    </tr>
-    <tr>
-        <td>Vitesse</td>
-        <td>{{ pokemon.vitesse }}</td>
-    </tr>
-</table>
 
-<button mat-fab color="warn" (click)="openDialog2(pokemon)">
-    <mat-icon>settings</mat-icon>
-</button>
+<div>
+    <h2 [style.color]="determineFontColor(type['color'])"> Numéro#{{ pokemon.id }} </h2>
+</div>
 
-<app-delete-pokemon [toDelete]="pokemon.id"></app-delete-pokemon>
+<div>
+    <table>
+        <tr>
+            <td>Attaque</td>
+            <td>{{ pokemon.attaque }}</td>
+        </tr>
+        <tr>
+            <td>Défense</td>
+            <td>{{ pokemon.defense }}</td>
+        </tr>
+        <tr>
+            <td>Vitesse</td>
+            <td>{{ pokemon.vitesse }}</td>
+        </tr>
+    </table>
+</div>
 
+<div id="actions">
+    <button mat-fab color="warn" (click)="openDialog2(pokemon)">
+        <mat-icon size="large">settings</mat-icon>
+    </button>
+
+    <app-delete-pokemon [toDelete]="pokemon.id"></app-delete-pokemon>
+</div>
+    
 
 
 
