--- a/src/app/pokemon/pages/pokemon-list/pokemon-list.component.html
+++ b/src/app/pokemon/pages/pokemon-list/pokemon-list.component.html
@@ -31,6 +31,9 @@
     <tr mat-row *matRowDef="let row; columns: titles;"></tr>
 </table>
 
-<button mat-fab color="warn" (click)="openDialog()">
-  <mat-icon>add</mat-icon>
-</button>
+<div>
+  <button mat-fab color="warn" (click)="openDialog()">
+    <mat-icon>add</mat-icon>
+  </button>
+</div>
+  
