Implementation partie Types, TypeList, Rooting, Ajout Type

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
 <app-header></app-header>
+<nav>
+    <a routerLink="/pokemons/list">Pokemons</a>
+    <a routerLink="/types/list">Types</a>
+</nav>
 
 <router-outlet></router-outlet>
 
