--- a/src/app/types/pages/types-list/types-list.component.html
+++ b/src/app/types/pages/types-list/types-list.component.html
@@ -11,6 +11,14 @@
       <th mat-header-cell *matHeaderCellDef>Color</th>
       <td mat-cell *matCellDef="let type" [style.background]="type.color" [style.color]="determineFontColor(type.color)"> {{ type.color }} </td>
     </ng-container>
+    <ng-container matColumnDef="update">
+      <th mat-header-cell *matHeaderCellDef>Update</th>
+      <td mat-cell *matCellDef="let type">
+        <button mat-fab color="warn" (click)="openDialogUpdate(type)">
+          <mat-icon>settings_applications</mat-icon>
+        </button>
+      </td>
+    </ng-container>
     <tr mat-header-row *matHeaderRowDef="titles"></tr>
     <tr mat-row *matRowDef="let row; columns: titles;"></tr>
 </table>
